--- a/game_task/src/main/res/values/strings.xml
+++ b/game_task/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">game_task</string>
+    <string name="down_now">立刻下载</string>
+    <string name="down_cancel">下载取消</string>
+    <string name="receive_task">接受任务</string>
 </resources>
